Bug: Fixed certain images overflowing container

--- a/src/app/components/add-form/add-form.component.scss
+++ b/src/app/components/add-form/add-form.component.scss
@@ -120,6 +120,7 @@
                 padding: 10px;
                 display: flex;
                 flex-direction: column;
+                max-width: calc(100% - 20px);
                 .error-input {
                     border: 2px solid red;
                 }
